feat(preact): add package, plugin and config

--- a/packages/gatsby-rebass/package.json
+++ b/packages/gatsby-rebass/package.json
@@ -15,11 +15,13 @@
     "gatsby-plugin-manifest": "2.2.26",
     "gatsby-plugin-netlify": "2.1.23",
     "gatsby-plugin-offline": "3.0.18",
+    "gatsby-plugin-preact": "^3.1.20",
     "gatsby-plugin-react-helmet": "^3.0.6",
     "gatsby-plugin-sharp": "2.2.36",
     "gatsby-plugin-typescript": "^2.1.15",
     "gatsby-source-filesystem": "^2.1.35",
     "gatsby-transformer-sharp": "^2.3.2",
+    "preact": "^10.0.5",
     "prop-types": "^15.7.2",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
