feat(gatsby-plugin-webpack-bundle-analyzer): add package and config

--- a/packages/gatsby-rebass/package.json
+++ b/packages/gatsby-rebass/package.json
@@ -18,6 +18,7 @@
     "gatsby-plugin-react-helmet": "^3.0.6",
     "gatsby-plugin-sharp": "2.2.36",
     "gatsby-plugin-typescript": "^2.1.15",
+    "gatsby-plugin-webpack-bundle-analyzer": "^1.0.5",
     "gatsby-source-filesystem": "^2.1.35",
     "gatsby-transformer-sharp": "^2.3.2",
     "prop-types": "^15.7.2",
