--- a/packages/gatsby-docz/package.json
+++ b/packages/gatsby-docz/package.json
@@ -6,6 +6,7 @@
   "author": "Luiz Cieslak <luiz@cieslak.dev>",
   "dependencies": {
     "babel-plugin-transform-remove-console": "^6.9.4",
+    "docz": "^2.0.0-rc.73",
     "gatsby": "2.17.10",
     "gatsby-image": "2.2.30",
     "gatsby-plugin-manifest": "2.2.26",
