--- a/packages/gatsby-docz/package.json
+++ b/packages/gatsby-docz/package.json
@@ -12,9 +12,7 @@
     "gatsby-plugin-manifest": "2.2.26",
     "gatsby-plugin-netlify": "2.1.23",
     "gatsby-plugin-offline": "3.0.18",
-    "gatsby-plugin-postcss": "^2.1.14",
     "gatsby-plugin-preact": "^3.1.20",
-    "gatsby-plugin-purgecss": "^4.0.1",
     "gatsby-plugin-react-helmet": "^3.0.6",
     "gatsby-plugin-sharp": "2.2.36",
     "gatsby-plugin-typescript": "^2.1.15",
@@ -26,9 +24,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
-    "react-helmet": "^5.2.1",
-    "tailwind": "^4.0.0",
-    "tailwindcss": "^1.1.3"
+    "react-helmet": "^5.2.1"
   },
   "keywords": [
     "gatsby"
