--- a/packages/gatsby-tailwind/codegen.yml
+++ b/packages/gatsby-tailwind/codegen.yml
@@ -1,6 +1,6 @@
 overwrite: true
 schema: 'http://localhost:8000/___graphql'
-documents: 'src/**/*.{ts,tsx}'
+documents: 'src/**/*.{ts,js,tsx}'
 generates:
   src/generated/graphql.tsx:
     plugins:
