fix(cypress): install, config, default files

--- a/packages/cra/package.json
+++ b/packages/cra/package.json
@@ -18,7 +18,6 @@
     "typescript": "^3.7.5"
   },
   "devDependencies": {
-    "@bahmutov/add-typescript-to-cypress": "^2.1.2",
     "@testing-library/cypress": "^5.3.0",
     "@testing-library/jest-dom": "^5.1.1",
     "@testing-library/react": "^9.4.0",
@@ -51,7 +50,7 @@
     "eject": "react-scripts eject",
     "format": "prettier --write src/**/*.{ts,tsx,js,jsx,css} && prettier --write ./*.{ts,tsx,js,jsx,css} && prettier --write cypress/**/*.{ts,tsx,js,jsx,css}",
     "start:api": "json-server -p 4000 --watch rest-api/products.json",
-    "cypress:open": "cypress open"
+    "cy:open": "cypress open --project cypress/"
   },
   "eslintConfig": {
     "extends": "react-app"
