--- a/package.json
+++ b/package.json
@@ -7,5 +7,7 @@
   "devDependencies": {
     "lerna": "^3.18.1"
   },
-  "scripts": {}
+  "scripts": {
+    "postinstall": "npx lerna bootstrap"
+  }
 }
