--- a/packages/cra/package.json
+++ b/packages/cra/package.json
@@ -11,6 +11,7 @@
     "@reach/router": "^1.3.1",
     "axios": "^0.19.2",
     "clsx": "^1.1.0",
+    "dotenv": "^8.2.0",
     "easy-peasy": "^3.3.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
