--- a/packages/gatsby-docz/package.json
+++ b/packages/gatsby-docz/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "babel-plugin-transform-remove-console": "^6.9.4",
     "docz": "^2.0.0-rc.73",
+    "dotenv": "^8.2.0",
     "gatsby": "2.18.16",
     "gatsby-image": "2.2.37",
     "gatsby-plugin-manifest": "2.2.34",
