--- a/packages/gatsby-rebass/package.json
+++ b/packages/gatsby-rebass/package.json
@@ -8,6 +8,7 @@
     "@emotion/core": "^10.0.22",
     "@emotion/styled": "^10.0.23",
     "babel-plugin-transform-remove-console": "^6.9.4",
+    "dotenv": "^8.2.0",
     "emotion-theming": "^10.0.19",
     "gatsby": "2.18.16",
     "gatsby-image": "2.2.37",
