--- a/packages/gatsby-tailwind/package.json
+++ b/packages/gatsby-tailwind/package.json
@@ -6,6 +6,7 @@
   "author": "Luiz Cieslak <luiz@cieslak.dev>",
   "dependencies": {
     "babel-plugin-transform-remove-console": "^6.9.4",
+    "dotenv": "^8.2.0",
     "gatsby": "2.18.16",
     "gatsby-image": "2.2.37",
     "gatsby-plugin-manifest": "2.2.34",
