--- a/packages/cra/package.json
+++ b/packages/cra/package.json
@@ -14,6 +14,7 @@
     "easy-peasy": "^3.3.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-icons": "^3.9.0",
     "react-scripts": "3.4.0",
     "typescript": "^3.7.5"
   },
