--- a/packages/gatsby-docz/package.json
+++ b/packages/gatsby-docz/package.json
@@ -24,7 +24,8 @@
     "prop-types": "^15.7.2",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
-    "react-helmet": "^5.2.1"
+    "react-helmet": "^5.2.1",
+    "react-icons": "^3.9.0"
   },
   "keywords": [
     "gatsby"
