--- a/packages/gatsby-rebass/package.json
+++ b/packages/gatsby-rebass/package.json
@@ -27,6 +27,7 @@
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-helmet": "^5.2.1",
+    "react-icons": "^3.9.0",
     "rebass": "^4.0.7",
     "styled-system": "^5.1.2"
   },
