--- a/packages/gatsby-tailwind/package.json
+++ b/packages/gatsby-tailwind/package.json
@@ -25,6 +25,7 @@
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-helmet": "^5.2.1",
+    "react-icons": "^3.9.0",
     "tailwind": "^4.0.0",
     "tailwindcss": "^1.1.3"
   },
