--- a/packages/gatsby-docz/package.json
+++ b/packages/gatsby-docz/package.json
@@ -14,7 +14,9 @@
     "gatsby-plugin-offline": "3.0.30",
     "gatsby-plugin-preact": "^3.1.20",
     "gatsby-plugin-react-helmet": "^3.0.6",
+    "gatsby-plugin-robots-txt": "^1.5.0",
     "gatsby-plugin-sharp": "2.3.10",
+    "gatsby-plugin-sitemap": "^2.2.30",
     "gatsby-plugin-typescript": "^2.1.15",
     "gatsby-plugin-webpack-bundle-analyzer": "^1.0.5",
     "gatsby-source-filesystem": "^2.1.35",
