--- a/packages/cra/package.json
+++ b/packages/cra/package.json
@@ -15,7 +15,7 @@
     "easy-peasy": "^3.3.0",
     "jquery": "^3.5.1",
     "react": "16.13.1",
-    "react-dom": "^16.12.0",
+    "react-dom": "16.13.1",
     "react-icons": "^3.9.0",
     "react-scripts": "3.4.1",
     "typescript": "^3.7.5"
@@ -28,7 +28,7 @@
     "@types/node": "^13.7.0",
     "@types/reach__router": "^1.3.0",
     "@types/react": "^16.9.19",
-    "@types/react-dom": "^16.9.5",
+    "@types/react-dom": "16.9.7",
     "@typescript-eslint/eslint-plugin": "^1.10.2",
     "@typescript-eslint/parser": "^1.10.2",
     "babel-jest": "^24.9.0",
