--- a/packages/gatsby-docz/package.json
+++ b/packages/gatsby-docz/package.json
@@ -8,7 +8,7 @@
     "babel-plugin-transform-remove-console": "^6.9.4",
     "docz": "^2.0.0-rc.73",
     "dotenv": "^8.2.0",
-    "gatsby": "2.20.2",
+    "gatsby": "2.21.16",
     "gatsby-image": "2.4.2",
     "gatsby-plugin-manifest": "2.4.2",
     "gatsby-plugin-netlify": "2.3.2",
@@ -27,7 +27,7 @@
     "preact": "^10.0.5",
     "prop-types": "^15.7.2",
     "react": "16.13.1",
-    "react-dom": "^16.11.0",
+    "react-dom": "16.13.1",
     "react-helmet": "^5.2.1",
     "react-icons": "^3.9.0"
   },
