--- a/packages/gatsby-rebass/package.json
+++ b/packages/gatsby-rebass/package.json
@@ -10,7 +10,7 @@
     "babel-plugin-transform-remove-console": "^6.9.4",
     "dotenv": "^8.2.0",
     "emotion-theming": "^10.0.19",
-    "gatsby": "^2.21.16",
+    "gatsby": "2.21.16",
     "gatsby-image": "2.4.2",
     "gatsby-plugin-emotion": "^4.1.13",
     "gatsby-plugin-manifest": "2.4.2",
@@ -29,7 +29,7 @@
     "preact": "^10.0.5",
     "prop-types": "^15.7.2",
     "react": "16.13.1",
-    "react-dom": "^16.13.1",
+    "react-dom": "16.13.1",
     "react-helmet": "^5.2.1",
     "react-icons": "^3.9.0",
     "rebass": "^4.0.7",
